force-app/main/default/objects/Policy_Coverage__c/Policy_Coverage__c.object-meta.xml
<CustomObject>
    <label>Policy Coverage</label>
    <nameField>
        <displayFormat>PCN-{0000}</displayFormat>
        <label>Policy Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>