force-app/main/default/objects/Policy_Coverage__c/fields/Coverage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Limit__c</fullName>
    <label>Coverage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>