force-app/main/default/objects/Policy_Coverage__c/fields/Coverage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Percentage__c</fullName>
    <label>Coverage Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>