force-app/main/default/objects/Policy_Coverage__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accidental Damage</fullName>
            </value>
            <value>
                <fullName>Theft; Fire</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Natural Disaster;</fullName>
            </value>
            <value>
                <fullName>hird Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>