force-app/main/default/objects/Policy_Coverage__c/fields/Insurance_policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_policy__c</fullName>
    <label>Insurance policy</label>
    <referenceTo>Insurance_policy__c</referenceTo>
    <relationshipLabel>Policy Coverages</relationshipLabel>
    <relationshipName>Policy_Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>